--- a/app/src/main/res/layout/activity_esteraha.xml
+++ b/app/src/main/res/layout/activity_esteraha.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SimbelActivity">
+    tools:context=".EsterahaActivity">
 
     <TextView
         android:id="@+id/txtview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Abu Simbel"
+        android:text="Esteraha"
         android:textSize="25dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentTop="true"
@@ -18,8 +18,8 @@
         />
 
     <ImageView
-        android:id="@+id/simbelimg"
-        android:src="@drawable/faculty_eng"
+        android:id="@+id/esteraha"
+        android:src="@drawable/esteraha"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/txtview1"
         android:layout_width="wrap_content"
@@ -30,22 +30,19 @@
         android:id="@+id/txtview2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/simbelimg"
+        android:layout_below="@+id/esteraha"
         android:layout_centerInParent="true"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
-        android:text="Justly famous for its megalithic proportions,
-         Abu Simbel is also known for the incredible engineering feat carried out by UNESCO in the 1960s,
-         which saw the entire temple moved from its original setting to save it from disappearing under the rising water of the Aswan dam. "
+        android:text="This is where Aswan University's faculty members reside. A masterpiece of architecture. Living here makes it easy to access any place in town, except the faculty of engineering!"
         android:textSize="25dp" />
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtview2"
-        android:text="Check Google Maps"
-        android:layout_marginTop="30dp"
         android:layout_centerInParent="true"
-        />
+        android:layout_marginTop="30dp"
+        android:text="Location" />
 </RelativeLayout>
