--- a/app/src/main/res/layout/activity_omboudou.xml
+++ b/app/src/main/res/layout/activity_omboudou.xml
@@ -38,10 +38,10 @@
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtview2"
         android:layout_centerInParent="true"
         android:layout_marginTop="30dp"
-        android:text="Check Google Maps" />
+        android:text="Location" />
 </RelativeLayout>
